--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,38 @@
   <version>1.0.0-SNAPSHOT</version>
   <name>PersonWebservice Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <tomcat.version>8.5.30</tomcat.version>
+  </properties>
   <dependencies>
+  
+  <dependency>
+        <groupId>org.apache.tomcat.embed</groupId>
+        <artifactId>tomcat-embed-core</artifactId>
+        <version>${tomcat.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.tomcat.embed</groupId>
+        <artifactId>tomcat-embed-jasper</artifactId>
+        <version>${tomcat.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.tomcat</groupId>
+        <artifactId>tomcat-jasper</artifactId>
+        <version>${tomcat.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.tomcat</groupId>
+        <artifactId>tomcat-jasper-el</artifactId>
+        <version>${tomcat.version}</version>
+    </dependency>
+  <dependency>
+        <groupId>org.apache.tomcat</groupId>
+        <artifactId>tomcat-jsp-api</artifactId>
+        <version>${tomcat.version}</version>
+    </dependency>
+  
+  
     <dependency>
 		    <groupId>junit</groupId>
 		    <artifactId>junit</artifactId>
@@ -90,6 +121,30 @@
                             </artifactItem>
                         </artifactItems>
                     </configuration>
+                </execution>
+            </executions>
+        </plugin>
+        
+        
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>appassembler-maven-plugin</artifactId>
+            <version>2.0.0</version>
+            <configuration>
+                <assembleDirectory>target</assembleDirectory>
+                <programs>
+                    <program>
+                        <mainClass>Main</mainClass>
+                        <name>webapp</name>
+                    </program>
+                </programs>
+            </configuration>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>assemble</goal>
+                    </goals>
                 </execution>
             </executions>
         </plugin>
