--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,12 @@
   <version>1.0.0-SNAPSHOT</version>
   <name>PersonWebservice Maven Webapp</name>
   <url>http://maven.apache.org</url>
-  <properties>
+ <!--  <properties>
     <tomcat.version>8.5.30</tomcat.version>
-  </properties>
+  </properties>-->
   <dependencies>
   
-  <dependency>
+   <!-- <dependency>
         <groupId>org.apache.tomcat.embed</groupId>
         <artifactId>tomcat-embed-core</artifactId>
         <version>${tomcat.version}</version>
@@ -38,7 +38,7 @@
         <version>${tomcat.version}</version>
     </dependency>
   
-  
+  -->
     <dependency>
 		    <groupId>junit</groupId>
 		    <artifactId>junit</artifactId>
@@ -125,7 +125,7 @@
             </executions>
         </plugin>
         
-        
+     <!--     
         <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>appassembler-maven-plugin</artifactId>
@@ -148,7 +148,7 @@
                 </execution>
             </executions>
         </plugin>
- 
+ -->
 		</plugins>
  
     <finalName>PersonWebservice</finalName>
