--- a/pom.xml
+++ b/pom.xml
@@ -51,11 +51,11 @@
 			<version>1.9</version>
     </dependency>
     
-        <dependency>
+       <!--   <dependency>
             <groupId>javax.ws.rs</groupId>
             <artifactId>jsr311-api</artifactId>
             <version>1.1.1</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-client</artifactId>
@@ -81,6 +81,13 @@
 	      <artifactId>postgresql</artifactId>
 	      <version>42.2.1</version>
 	    </dependency>
+	    
+	    <dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>javax.servlet-api</artifactId>
+		    <version>3.1.0</version>
+		    <scope>provided</scope>
+		</dependency>
   </dependencies>
   <build>
   <plugins>
